Updating to fix some spacing on story page sections. (#1316)
* Updating to fix some spacing on story page sections.

* Updating ESLint error.

* Forgot to hide yellow underline on h1s on small sizes.

--- a/resources/assets/components/pages/StoryPage/story-page.scss
+++ b/resources/assets/components/pages/StoryPage/story-page.scss
@@ -44,3 +44,11 @@
     }
   }
 }
+
+.story-section {
+  padding: $half-spacing 0;
+
+  @include media($medium) {
+    padding: $base-spacing 0;
+  }
+}
